--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+icewm (1.3.8-2) unstable; urgency=low
+
+  * Fix format buffer overflow in CPU tooltip rendering (closes: 765965)
+
+ -- Eduard Bloch <blade@debian.org>  Sun, 19 Oct 2014 23:57:51 +0200
+
 icewm (1.3.8-1) unstable; urgency=low
 
   * New upstream version (closes: #749475)
